--- a/README.Rmd
+++ b/README.Rmd
@@ -79,6 +79,31 @@ Dados espaciais vetoriais dos limites das UPPs:
 shape <- spatial_upp
 ```
 
+Exemplo:
+Quantidade de tentativas de feminicídio de outubro de 2016 até dezembro de 2022 por CISP:
+
+```{r}
+library(ispdata)
+library(dplyr)
+library(ggplot2)
+library(sf)
+
+df <- crimes_against_life(type = 'femicide') |>
+  group_by(cisp) |>
+  summarise(total = sum(feminicidio_tentativa)) |>
+  left_join(spatial_cisp, by = c("cisp" = "dp")) |>
+  filter(aisp %in% c(27, 40, 31, 14, 18, 41, 9, 6, 23, 3, 16, 22, 4, 17, 19, 2))|>
+  st_as_sf()
+
+ggplot() + 
+  geom_sf(data = df, mapping = aes(fill = total)) +
+  theme_classic() +
+  scale_fill_viridis_c()
+
+```
+
+Em breve serão adicionados dados populacionais no pacote para permitir a análise de ocorrências a cada 100 mil habitantes.
+
 ## Citação
 Para citar em trabalhos, use:
 
