ajuste no readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -104,7 +104,13 @@ df <- monthly_stats(by = 'cisp') |>
 ggplot() + 
   geom_sf(data = df, mapping = aes(fill = v_100k_hab), color = NA) +
   theme_classic() +
-  scale_fill_viridis_c()
+  scale_fill_viridis_c(name = "Quantidade") + 
+  labs(title = "Taxa de homicídios por intervenção policial em 2020\nna cidade do Rio de Janeiro",
+       subtitle = "Por Área Integrada de Segurança Pública (AISP)",
+       fill = "Quantidade (por 100 mil habitantes)") +
+  coord_sf() +
+  ggspatial::annotation_scale() +
+  ggspatial::annotation_north_arrow(location = "br")
 
 ```
 
