--- a/README.Rmd
+++ b/README.Rmd
@@ -79,6 +79,8 @@ shape <- spatial_upp
 ```
 
 Exemplo:
+Taxa de homicídios por intervenção policial em 2020 na cidade do Rio de Janeiro.
+Dados por Área Integrada de Segurança Pública (AISP).
 
 ```{r message=FALSE, warning=FALSE}
 
@@ -103,14 +105,12 @@ df <- monthly_stats(by = 'cisp') |>
 ggplot() + 
   geom_sf(data = df, mapping = aes(fill = v_100k_hab), color = NA) +
   theme_classic() +
-  scale_fill_viridis_c(name = "Quantidade") + 
-  labs(title = "Taxa de homicídios por intervenção policial em 2020\nna cidade do Rio de Janeiro",
-       subtitle = "Por Área Integrada de Segurança Pública (AISP)",
-       fill = "Quantidade (por 100 mil habitantes)") +
+  scale_fill_viridis_c(name = "Quantidade para\ncada 100 mil hab") + 
+  labs(title = "",
+       subtitle = "") +
   coord_sf() +
   ggspatial::annotation_scale() +
   ggspatial::annotation_north_arrow(location = "br")
-
 ```
 
 
